back to no structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,29 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(neuroribotools VERSION 1.0.0 LANGUAGES CXX)
-target_compile_options(neuroribotools PRIVATE -Wall)
-target_compile_options(neuroribotools PRIVATE cxx_std_17)
-add_subdirectory(src)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
+set (CMAKE_CXX_STANDARD 17)
+
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -W -Wall -pedantic")
+endif()
+
+
+project(ribotools VERSION 1.0.0 LANGUAGES CXX)
+set(SOURCE  ribotools.cpp
+            ArgParser.cpp ArgParser.h
+            BedRecord.cpp BedRecord.h
+            MetaGeneMain.cpp MetaGene.cpp MetaGene.h)
+add_executable(${PROJECT_NAME} ${SOURCE})
+
+
+
+find_package(PkgConfig REQUIRED)
+
+pkg_check_modules(ZLIB REQUIRED zlib)
+target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC ${ZLIB_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} ${ZLIB_LIBRARIES})
+
+pkg_check_modules(HTSLIB REQUIRED htslib)
+target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC ${HTSLIB_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} ${HTSLIB_LIBRARIES})
+
