--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,5 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++17 -W -Wall -pedantic")
 endif()
 
-
-project(ribotools VERSION 1.0.0 LANGUAGES CXX)
-set(SOURCE  ribotools.cpp
-            version.cpp version.hpp
-            argparse.hpp
-            bedrecord.cpp bedrecord.hpp
-            metagene.cpp metagene.hpp)
-add_executable(${PROJECT_NAME} ${SOURCE})
-
-find_package(PkgConfig REQUIRED)
-
-pkg_check_modules(ZLIB REQUIRED zlib)
-target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC ${ZLIB_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${ZLIB_LIBRARIES})
-
-pkg_check_modules(HTSLIB REQUIRED htslib)
-target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC ${HTSLIB_INCLUDE_DIRS})
-target_link_libraries(${PROJECT_NAME} ${HTSLIB_LIBRARIES})
-
+add_subdirectory(src)
+add_subdirectory(test)
