NFC alpha state

--- a/api/cpp/.vscode/tasks.json
+++ b/api/cpp/.vscode/tasks.json
@@ -25,6 +25,10 @@
                 "cwd": "${workspaceRoot}/build"
             },
             "command": "make",
+            "args": [
+                "-j",
+                "8"
+            ],
             "dependsOn": [
                 "cmake"
             ]
