--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ project(ribotools)
 set(SOURCE ribotools.cpp
            main_codonfc.cpp
            main_codonrate.cpp
-           parserargv.cpp parserargv.h)
+           parserargv.cpp parserargv.h
+           bedrecord.cpp bedrecord.h)
 add_executable(${PROJECT_NAME} ${SOURCE})
 
 find_package(PkgConfig REQUIRED)
