--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,16 @@ endif()
 project(ribotools)
 set(SOURCE 
     ribotools.cpp
+    aminoacids.cpp aminoacids.h
     bamhandle.cpp bamhandle.h
     bedrecord.cpp bedrecord.h
     parserargv.cpp parserargv.h
     main_asite.cpp
-    main_codonfc.cpp
     main_codonfreq.cpp
     main_codonrate.cpp
     main_features.cpp
     main_metagene.cpp
+    main_mtdr.cpp
     main_uorfs.cpp
     main_utrseq.cpp
     )
