--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,12 @@ set(SOURCE
     bamhandle.cpp bamhandle.h
     bedrecord.cpp bedrecord.h
     parserargv.cpp parserargv.h
+    utilities.cpp utilities.h
     main_asite.cpp
     main_codonfreq.cpp
     main_codonrate.cpp
     main_features.cpp
+    main_irate.cpp
     main_metagene.cpp
     main_mtdr.cpp
     main_uorfs.cpp
