--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.0)
 
+if(APPLE)
+    # Fix linking on 10.14+ See https://stackoverflow.com/questions/54068035
+    link_directories(/usr/local/lib)
+endif()
+
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall")
 set (CMAKE_CXX_STANDARD 14)
 
@@ -18,6 +23,7 @@ set(SOURCE
     main_asite.cpp
     main_codonfreq.cpp
     main_codonrate.cpp
+    main_count.cpp
     main_features.cpp
     main_irate.cpp
     main_length.cpp
@@ -28,6 +34,8 @@ set(SOURCE
     main_utrseq.cpp
     )
 add_executable(${PROJECT_NAME} ${SOURCE})
+
+
 
 find_package(PkgConfig REQUIRED)
 
