add translate to amino acids

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ set(SOURCE
     main_mtdr.cpp
     main_pausing.cpp
     main_poffset.cpp
+    main_translate.cpp
     main_uorfs.cpp
     main_utrseq.cpp
     )
