--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCE
     main_mtdr.cpp
     main_pausing.cpp
     main_poffset.cpp
+    main_runoff.cpp
     main_structure.cpp
     main_translate.cpp
     main_uorfs.cpp
