add BedIO and new periodicity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCE
     argumentparser.h
     aminoacidtable.cpp aminoacidtable.h
     bamhandle.cpp bamhandle.h
+    bedio.cpp bedio.h
     bedrecord.cpp bedrecord.h
     version.cpp version.h
     main_basefreq.cpp
@@ -33,6 +34,7 @@ set(SOURCE
     main_metagene.cpp
     main_mtdr.cpp
     main_pausing.cpp
+    main_periodicity.cpp
     main_poffset.cpp
     main_runoff.cpp
     main_structure.cpp
